--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h1><i class="fa-solid fa-bars"></i></h1>
         </div>
         <div class="nav-logo">
-            <img class="logo-1" src="/images/bose_logo.png" alt="">
-            <img class="logo-2" src="/images/bose_logo-small.png" alt="">
+            <img class="logo-1" src="./images/bose_logo.png" alt="">
+            <img class="logo-2" src="./images/bose_logo-small.png" alt="">
         </div>
         <div class="nav-main">
             <div class="nav-part1">
@@ -34,7 +34,7 @@
     </nav>
 
     <div class="container">
-        <img src="/images/cq5dam.web.1920.1920.jpeg" alt="">
+        <img src="./images/cq5dam.web.1920.1920.jpeg" alt="">
         <div class="container-part1">
         <h1>Go beyond the beat</h1>
         <p>INTRODUCING THE NEW QUIETCOMFORT HEADPHONES</p>
@@ -54,7 +54,7 @@
 
 
             <div class="item">
-                <img src="/images/cq5dam.web.320.320 (1).png" alt="">
+                <img src="./images/cq5dam.web.320.320 (1).png" alt="">
                 <button style="width:100%;background-color:#666666;color:white;border:none;">
                     LIMITED EDITION
                 </button>
@@ -64,14 +64,14 @@
 
 
             <div class="item">
-                <img src="/images/cq5dam.web.320.320 (2).png" alt="">
+                <img src="./images/cq5dam.web.320.320 (2).png" alt="">
                 
                 <h5 style="margin:10px 0px;">Bose Music Amplifier</h5>
                 <P style="font-size: 14px;">Amplifier</P>
             </div>
 
             <div class="item">
-                <img src="/images/cq5dam.web.320.320.png" alt="">
+                <img src="./images/cq5dam.web.320.320.png" alt="">
                 
                 <h5 style="margin:10px 0px;">Bose SoundLink Flex Bluetooth speaker</h5>
                 <P style="font-size: 14px;">Portable Bluetooth</P>
@@ -79,7 +79,7 @@
 
 
             <div class="item">
-                <img src="/images/cq5dam.web.320.320 (3).png" alt="">
+                <img src="./images/cq5dam.web.320.320 (3).png" alt="">
                 <button style="width:100%;background-color:#666666;color:white;border:none;">
                     LIMITED EDITION
                 </button>
@@ -101,7 +101,7 @@
     <!-- section-1 -->
 
     <div class="section">
-        <img src="/images/cq5dam.web.1920.1920 (1).jpeg" alt="" class="section-img1">
+        <img src="./images/cq5dam.web.1920.1920 (1).jpeg" alt="" class="section-img1">
         <div class="section-content">
             <h1>Feel your favourite content, everywhere.</h1>
             <p>NEW | BOSE SMART ULTRA SOUNDBAR</p>
@@ -114,10 +114,10 @@
 
     <!-- section-2 -->
     <div class="section section2">
-        <img src="/images/cq5dam.web.1920.1920.png" alt="" class="section-img2">
-        <div style="left: 0;padding-inline:10%;" class="section-content">
+        <img src="./images/cq5dam.web.1920.1920.png" alt="" class="section-img2">
+        <div style="left: 0;padding-inline:10%;height: 40vh;" class="section-content">
             <p style="margin-bottom: 20px;">LIMITED EDITION</p>
-            <h1 style="font-size: 40px;font_weight:900;">Vivid sound. Bold new hue. </h1>
+            <h1 style="font-size: 40px;font-weight:900;">Vivid sound. Bold new hue. </h1>
             <p>BOSE SOUNDLINK FLEX BLUETOOTH® SPEAKER IN CYPRESS GREEN</p>
             <button>LEARN MORE</button>
         </div>
@@ -128,7 +128,7 @@
     <!-- section-3 -->
 
     <div class="section">
-        <img src="/images/cq5dam.web.1920.1920 (2)1.jpeg" alt="" class="section-img1">
+        <img src="./images/cq5dam.web.1920.1920 (2)1.jpeg" alt="" class="section-img1">
         <div class="section-content">
             <h1>Sound just got personal</h1>
             <p>NEW | QUIETCOMFORT® EARBUDS II</p>
@@ -142,7 +142,7 @@
     <!-- section-4 -->
 
     <div class="section">
-        <img src="/images/cq5dam.web.1920.1920 (1)2.jpeg" alt="" class="section-img1">
+        <img src="./images/cq5dam.web.1920.1920 (1)2.jpeg" alt="" class="section-img1">
         <div class="section-content" id="section4-content">
             <h1>KEEPING IT GREEN</h1>
             <p>Learn about sustainability at Bose.</p>
@@ -154,7 +154,7 @@
     <!-- section-5 -->
 
     <div class="section">
-        <img src="/images/cq5dam.web.1920.1920 (2).jpeg" alt="" class="section-img1">
+        <img src="./images/cq5dam.web.1920.1920 (2).jpeg" alt="" class="section-img1">
         <div class="section-content">
             <p style="margin-bottom: 20px;">BOSE AUTOMOTIVE</p>
             <h1>True believers in the power of sound</h1>
@@ -217,11 +217,11 @@
 
         <div class="foot-end">
 
-            <img src="/images/bose_logo.png" alt="">
+            <img src="./images/bose_logo.png" alt="">
             <div>
-                <h5 style="padding-bottom: 5vh;"><span style="color: white;margin: right 10px;">Asian pacific </span>  change >></h5>
+                <h5 style="padding-bottom: 5vh;"><span style="color: white;">Asian pacific </span>  change >></h5>
 
-            <h5 style="width: 60vw; border-top:2px solid gray;">Bose Corporation 2024</h5>
+            <h5 style="width: 50vw; border-top:2px solid gray;">Bose Corporation 2024</h5>
             </div>
         </div>
 
